[DDW-170] Password input with strength meter (#2038)
* [DDW-170] Upgrade to latest react-polymorph

* [DDW-170] Integrate react-polymorph password input

* [DDW-170] Add changelog entry

* [DDW-170] Remove formerly invalid passwords from tests

* [DDW-170] Fix broken acceptance tests

* [DDW-170] Fix build issues

* [DDW-170] Re-add removed password instructions

* [DDW-170] Fix styling issues on change password dialog

* [DDW-170] Upgrade RP to fix tooltip focus issue

* [DDW-170] Add final i18n copy

* [DDW-170] Fix password input tooltip border radius

* [DDW-170] Fix dialog and password instruction styles

* [DDW-170] Configure password input themes properly

* [DDW-170] Fix broken tooltips on loading screen

* [DDW-170] Fixed yarn lock file

* [DDW-170] Fix yarn.lock

* [DDW-170] Fixing merge conflicts

* [DDW-170] Fix password repeat bug

* [DDW-170] Fix build issues

* [DDW-170] Fix broken translations after merge conflicts

* [DDW-170] Fix unintended downgrade of electron-log

* [DDW-170] Final cleanup

* [DDW-170] Cleanup yarn.lock file

* [DDW-170] Fix translations

* [DDW-170] Fix unrelated translation changes

* [DDW-170] Re-add removed i18n line

* [DDW-170] Another round of JP translation fixes

* [DDW-170] Fix english translations

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -4,12 +4,10 @@
 .dialog {
   font-family: var(--font-light);
   .spendingPasswordFields {
-    overflow: hidden;
     transition: all 400ms ease;
 
     .newPassword,
-    .currentPassword,
-    .repeatedPassword {
+    .currentPassword {
       margin-bottom: 20px;
     }
 
@@ -17,6 +15,7 @@
       color: var(--theme-dialog-text-color);
       font-family: var(--font-light);
       line-height: 1.38;
+      margin-top: 10px;
     }
   }
 
