--- a/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.input {
+.walletName {
   margin-bottom: 20px;
 }
 
@@ -27,6 +27,13 @@
   &:first-child {
     margin-right: 10px;
   }
+}
+
+.passwordInstructions {
+  color: var(--theme-dialog-text-color);
+  font-family: var(--font-light);
+  line-height: 1.38;
+  margin-top: 10px;
 }
 
 .error {
