[DDW-283]: Implement slider component for Stake Pools screen

--- a/source/renderer/app/themes/index.global.scss
+++ b/source/renderer/app/themes/index.global.scss
@@ -1,5 +1,6 @@
 @import '~react-virtualized/styles.css';
 @import '~react-datetime/css/react-datetime.css';
+@import '~rc-slider/assets/index.css';
 
 // ============ RESET ===========
 // http://meyerweb.com/eric/tools/css/reset
