--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
@@ -1,7 +1,7 @@
 .component {
 }
 
-.sectionLabel {
+.walletToLabel {
   color: #ffffff;
   font-family: var(--font-medium);
   font-size: 16px;
@@ -14,8 +14,7 @@
   margin-bottom: 6px;
   width: 20px;
 }
-
-.sectionStringValue {
+.section {
   color: rgba(255, 255, 255, 0.5);
   font-family: var(--font-regular);
   font-size: 16px;
@@ -29,4 +28,24 @@
   b {
     font-family: var(--font-medium);
   }
+}
+
+.sectionHalf {
+  width: 50%;
+}
+
+.sectionTo {
+  @extend .section;
+}
+
+.sectionRewardsTotal {
+  @extend .section;
+  @extend .sectionHalf;
+}
+.sectionTransactionFees {
+  @extend .section;
+  @extend .sectionHalf;
+}
+.sectionFinalTotal {
+  @extend .section;
 }
