Wallet row fixes

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -10,7 +10,7 @@
   :global {
     .SimpleBubble_root {
       .SimpleBubble_bubble {
-        margin-left: -50px;
+        left: initial;
         right: -10px;
       }
     }
