--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -57,6 +57,7 @@
       :global {
         .SimpleTooltip_root {
           margin-right: 0;
+          margin-top: 2px;
         }
       }
 
@@ -69,7 +70,7 @@
         font-family: var(--font-semibold);
         font-size: 11px;
         line-height: 14px;
-        padding: 3px 8px;
+        padding: 0 8px 3px 8px;
         position: relative;
         text-transform: uppercase;
 
@@ -92,9 +93,14 @@
       }
 
       > span:first-child {
-        height: 21px;
-        line-height: initial !important;
-        margin-top: 3px;
+        height: 22px;
+        line-height: 2;
+        margin-top: 5.5px;
+      }
+
+      > span:last-child > span {
+        padding-bottom: 4px;
+        padding-top: 3px;
       }
 
       .tooltipLabelWrapper {
@@ -199,7 +205,7 @@
 
   .arrow {
     height: 7px;
-    margin: 2px 6px 0;
+    margin: 6px 6px 0;
     opacity: 0.3;
     position: relative;
     width: 3.5px;
