--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -180,6 +180,12 @@
         }
       }
     }
+
+    :global {
+      .LoadingSpinner_component.LoadingSpinner_medium .LoadingSpinner_icon svg path {
+        fill: var(--theme-loading-spinner-color);
+      }
+    }
   }
 
   b {
