--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -1,25 +1,38 @@
-.description {
-  color: rgba(255, 255, 255, 0.7);
-  font-family: var(--font-regular);
-  font-size: 16px;
-  height: 132px;
-  line-height: 1.38;
-  margin-bottom: 20px;
-  text-align: center;
-  width: 620px;
-}
-.recoveryPhrase {
-  margin-bottom: 20px;
-}
-.walletsDropdown {
-  margin-bottom: 20px;
-}
-hr {
-  background-color: rgba(36, 62, 98, 0.96);
-  border: none;
-  height: 1px;
-  margin-bottom: 17px;
-}
-.checkbox1 {
-  margin-bottom: 20px;
+.component {
+  .description {
+    color: rgba(255, 255, 255, 0.7);
+    font-family: var(--font-regular);
+    font-size: 16px;
+    height: 132px;
+    line-height: 1.38;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 620px;
+  }
+  .recoveryPhrase {
+    margin-bottom: 20px;
+  }
+  .walletsDropdown {
+    margin-bottom: 20px;
+  }
+  hr {
+    background-color: rgba(36, 62, 98, 0.96);
+    border: none;
+    height: 1px;
+    margin-bottom: 17px;
+  }
+  .checkbox {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 30px;
+    }
+  }
+  .action {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .buttonContinue {
+    margin-bottom: 20px;
+  }
 }
