[DDW-283]: Adjust styles of stake pool ranking panel

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
@@ -22,8 +22,16 @@
           }
         }
       }
+      .row {
+        .col {
+          margin-right: 10px;
+
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
       .walletSelector {
-        margin: 0 10px;
         padding-right: 20px;
 
         :global {
@@ -130,6 +138,7 @@
   }
   .row {
     display: flex;
+    flex-wrap: wrap;
   }
   .col {
     @extend %regularText;
