[DDW-283]: Fix wallet selection dropdown style on stake pools ranking panel

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
@@ -52,6 +52,9 @@
           .custom-value {
             font-family: var(--font-semibold);
           }
+          .SimpleOptions_options {
+            min-width: 180px;
+          }
         }
       }
     }
