--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -1,3 +1,4 @@
+@import '../../../themes/mixins/error-message';
 .component {
   .description {
     color: rgba(255, 255, 255, 0.7);
@@ -27,4 +28,9 @@
       margin-bottom: 30px;
     }
   }
+}
+.error {
+  @include error-message;
+  margin-bottom: 1rem;
+  text-align: center;
 }
