--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step3SuccessDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step3SuccessDialog.scss
@@ -1,5 +1,5 @@
 .title {
-  color: #ffffff;
+  color: var(--theme-staking-redeemItnRewards-text-color);
   font-family: var(--font-regular);
   font-size: 20px;
   line-height: 1.2;
@@ -12,16 +12,16 @@
   text-align: center;
   svg {
     height: 90px;
-    stroke: var(--theme-delegation-steps-success-tada-color);
+    stroke: var(--theme-staking-redeemItnRewards-icon-color);
     path {
-      stroke: var(--theme-delegation-steps-success-tada-color);
+      stroke: var(--theme-staking-redeemItnRewards-icon-color);
     }
     g {
       ellipse {
         &:nth-child(7),
         &:nth-child(8),
         &:nth-child(9) {
-          stroke: var(--theme-delegation-steps-success-tada-color);
+          stroke: var(--theme-staking-redeemItnRewards-icon-color);
         }
 
         &:nth-child(11),
@@ -30,21 +30,21 @@
         &:nth-child(14),
         &:nth-child(15),
         &:nth-child(16) {
-          fill: var(--theme-delegation-steps-success-tada-color);
+          fill: var(--theme-staking-redeemItnRewards-icon-color);
         }
       }
     }
   }
 }
 .description {
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--theme-staking-redeemItnRewards-description-text-color);
   font-family: var(--font-regular);
   font-size: 16px;
   line-height: 1.38;
   margin-bottom: 30px;
   text-align: center;
   b {
-    color: #ffffff;
+    color: var(--theme-staking-redeemItnRewards-text-color);
     font-family: var(--font-semibold);
   }
 }
