[DDW-178] Translation copy

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -9,6 +9,13 @@
     margin-bottom: 20px;
     text-align: center;
     width: 620px;
+    .itnLink {
+      @extend .description;
+      border-bottom: 1px solid var(--theme-staking-redeemItnRewards-text-color);
+      &:after {
+        background: var(--theme-staking-redeemItnRewards-text-color);
+      }
+    }
   }
   .recoveryPhrase {
     margin-bottom: 20px;
