[DDW-269] NewsFeed item - init

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -130,4 +130,10 @@
   &.show {
     margin-right: 0;
   }
+
+  .separator {
+    // @UPDATE TODO
+    border: 1px solid #233856;
+    margin: 15px 0;
+  }
 }
