[DDW-283]: Block input while ranking stake pools

--- a/source/renderer/app/components/widgets/Slider.scss
+++ b/source/renderer/app/components/widgets/Slider.scss
@@ -26,6 +26,9 @@
         z-index: 10;
       }
     }
+    .rc-slider-disabled {
+      background-color: transparent;
+    }
   }
   .upperMarks {
     display: flex;
