[DDW-178] Fix display erro and add dummy wallets

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -16,6 +16,9 @@
         background: var(--theme-staking-redeemItnRewards-text-color);
       }
     }
+    b {
+      font-family: var(--font-bold);
+    }
   }
   .recoveryPhrase {
     margin-bottom: 20px;
