[DDW-283]: Update ranking, polling and delegation wallet selection handler on stake pool ranking panel

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
@@ -78,7 +78,7 @@
                 text-overflow: ellipsis;
               }
               .WalletsDropdownOption_component {
-                max-width: 100%;
+                max-width: calc(100% - 20px);
 
                 .WalletsDropdownOption_label,
                 .WalletsDropdownOption_detail {
