--- a/source/renderer/app/components/widgets/forms/WalletsDropdownOption.scss
+++ b/source/renderer/app/components/widgets/forms/WalletsDropdownOption.scss
@@ -29,6 +29,13 @@
     margin-right: 6px;
     text-transform: uppercase;
   }
+
+  .ticket,
+  .label {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .detail {
