--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -20,13 +20,14 @@
 
   .rankingLoaderWrapper {
     align-items: center;
+    background-color: var(--rp-modal-overlay-bg-color);
+    bottom: 0;
     display: flex;
-    height: 100%;
     justify-content: center;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
+    left: 84px;
+    position: fixed;
+    right: 0;
+    top: 134px;
     z-index: 5000;
   }
 
