[DDW-283]: Fix wallet selector style on stake pool ranking panel

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsRanking.scss
@@ -48,6 +48,7 @@
             height: auto;
             padding: 0;
             width: calc(100% + 20px);
+            z-index: 0;
           }
           .SelectOverrides_selectInput::after {
             background-color: var(--theme-staking-font-color-regular);
