--- a/source/renderer/app/components/staking/redeem-itn-rewards/RedeemDialogOverride.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/RedeemDialogOverride.scss
@@ -9,6 +9,16 @@
     max-width: 740px !important;
     width: 100% !important;
   }
+
+  .dialogWrapper {
+    position: static;
+  }
+
+  :global {
+    .Dialog_dialogWrapper {
+      position: static;
+    }
+  }
 }
 
 .closeButton {
