[DDW-283]: Stake pools ranking based on delegated amount (#2051)
* [DDW-283]: Implement slider component for Stake Pools screen

* [DDW-283]: Update stake pools ranking by using slider value

* [DDW-283]: Fix flow test errors

* [DDW-283]: Run translations manager

* [DDW-283]: Update changelog

* [DDW-283] Fix CHANGELOG

* [DDW-283] Fix yarn.lock

* [DDW-283]: Update slider behavior on stake pool ranking panel

* [DDW-283] Fix stake pool loading

* [DDW-283] Send stake in lovelace

* [DDW-283]: Update stake pools ranking tooltips, slider and more

* [DDW-283]: Remove opacity of link button color on dark blue theme

* [DDW-283]: Adjust styles of stake pool ranking panel

* [DDW-283]: Fix input element style of wallet selector on state ranking screen

* [DDW-283]: Fix slider handle style

* [DDW-283] Animate stake pools list

* [DDW-283] Animate stake pools list

* [DDW-283]: Fix wallet selection dropdown style on stake pools ranking panel

* [DDW-283]: Fix wallet selector and slider styles on stake pools ranking panel

* [DDW-283]: Update locale handling on stake pools ranking panel

* [DDW-283]: Fix missing theme variables

* [DDW-283]: Update create theme

* [DDW-283]: Run translations manager

* [DDW-283]: Fix feedback issues on PR

* [DDW-283]: Update wallet selector dropdown on stake pools ranking panel

* [DDW-283]: Hide byron and small amount wallets on stake pools ranking panel

* [DDW-283]: Run translations manager

* [DDW-283]: Adjust ranking timeout

* [DDW-283]: Adjust wallet dropdown style on stake pools ranking panel

* [DDW-283]: Initiate stake pools ranking based on slider value when loading screen

* [DDW-283]: Block input while ranking stake pools

* [DDW-283]: Make ranking loader as a overlay

* [DDW-283]: Update ranking, polling and delegation wallet selection handler on stake pool ranking panel

* [DDW-283] Improve stake pools spinner overlay

* [DDW-283]: Update stake pool rank

--- a/source/renderer/app/components/widgets/forms/WalletsDropdownOption.scss
+++ b/source/renderer/app/components/widgets/forms/WalletsDropdownOption.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   font-family: var(--font-regular);
   justify-content: flex-start;
+  max-width: calc(100% - 20px);
+
   :global {
     .SimpleOptions_option {
       padding: 8px 20px;
@@ -15,6 +17,10 @@
 .label {
   font-size: 14px;
   line-height: 18px;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .topRow {
@@ -22,6 +28,9 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   .ticker {
     font-size: 14px;
@@ -34,7 +43,11 @@
 .detail {
   font-size: 12px;
   line-height: 16px;
+  max-width: 100%;
   opacity: 0.5;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .selected {
