Hide stake pool saturation info

--- a/source/renderer/app/components/staking/stake-pools/StakePoolThumbnail.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolThumbnail.scss
@@ -27,6 +27,14 @@
   &.isOnHover:hover {
     @extend .isHighlighted;
   }
+
+  &.hideSaturation {
+    padding-top: 14px;
+
+    .checkmarkWrapper {
+      margin-top: 5px;
+    }
+  }
 }
 
 .isHighlighted {
