Hide stake pool saturation info (#2067)
* Hide stake pool saturation info

* Fix alignment

--- a/source/renderer/app/components/staking/stake-pools/StakePoolThumbnail.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolThumbnail.scss
@@ -27,6 +27,18 @@
   &.isOnHover:hover {
     @extend .isHighlighted;
   }
+
+  &.hideSaturation {
+    padding-top: 11px;
+
+    .ticker {
+      margin-bottom: 5px;
+    }
+
+    .checkmarkWrapper {
+      margin-top: 7px;
+    }
+  }
 }
 
 .isHighlighted {
